syntax = "proto3";

package identity.v1;

message ValidateTokenRequest {
  string jwt = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string tenant_id = 3;
  repeated string roles = 4;
  string expires_at = 5; // ISO8601
}

service IdentityService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}
